# libidentification

./: README.md
.github/: dependabot.yml
.github/workflows/: lib-release.yml  maven-publishing.yml
bindings/panama/: build.gradle.kts  settings.gradle.kts
bindings/panama/src/main/java/: module-info.java
bindings/panama/src/main/java/com/whichlicense/metadata/identification/license/panama/: Main.java  PanamaFuzzyLicenseHasher.java  PanamaFuzzyLicenseIdentificationPipeline.java  PanamaFuzzyLicenseIdentifier.java  PanamaGaoyaLicenseHasher.java  PanamaGaoyaLicenseIdentificationPipeline.java  PanamaGaoyaLicenseIdentifier.java  package-info.java
bindings/panama/src/main/resources/: libidentification-darwin-aarch64.dylib  libidentification-darwin-amd64.dylib
bindings/panama/src/test/java/com/whichlicense/metadata/identification/license/panama/: AsciiHelper.java  PanamaFuzzyLicenseHasherTest.java  PanamaFuzzyLicenseIdentifierTest.java  PanamaGaoyaLicenseHasherTest.java  PanamaGaoyaLicenseIdentifierTest.java  PanamaLicenseHasherTest.java  PanamaLicenseIdentifierTest.java
bindings/panama/src/test/resources/: mit.normalized.license
bindings/wasm/: build.gradle.kts  settings.gradle.kts
bindings/wasm/src/main/java/: module-info.java
bindings/wasm/src/main/resources/: fuzzy.index.json  gaoya.index.json  identification.js  identification.wasm.js
panama/: Cargo.toml  build.rs
panama/include/: lib_identification.h
panama/src/: lib.rs  rustic.rs
wasm/: .gitignore  Cargo.toml
(+30 files in other folders)
