[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

[build-dependencies]
cbindgen = "0.24.3"

[package]
name = "identification-panama"
version = "0.6.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
whichlicense_detection = "3.0.1"
serde = { version = "1.0.152", features = ["derive"] }
regex = "1.7.1"
gaoya = "0.1.2"